--- a/src/main/resources/assets/lemon_core/lang/en_us.json
+++ b/src/main/resources/assets/lemon_core/lang/en_us.json
@@ -1,8 +1,10 @@
 {
+  "item.lemon_core.peridot": "Peridot",
   "item.lemon_core.ruby": "Ruby",
   "item.lemon_core.sapphire": "Sapphire",
   "item.lemon_core.silicon": "Silicon",
 
+  "item.lemon_core.peridot_fragment": "Peridot Fragment",
   "item.lemon_core.ruby_fragment": "Ruby Fragment",
   "item.lemon_core.sapphire_fragment": "Sapphire Fragment",
   "item.lemon_core.silicon_fragment": "Silicon Fragment",
@@ -50,6 +52,7 @@
   "item.lemon_core.invar_nugget": "Invar Nugget",
   "item.lemon_core.steel_nugget": "Steel Nugget",
 
+  "block.lemon_core.peridot_block": "Peridot Block",
   "block.lemon_core.ruby_block": "Ruby Block",
   "block.lemon_core.sapphire_block": "Sapphire Block",
   "block.lemon_core.silicon_block": "Silicon Block",
