--- a/src/main/resources/assets/lemon_core/lang/en_us.json
+++ b/src/main/resources/assets/lemon_core/lang/en_us.json
@@ -23,6 +23,7 @@
   "item.lemon_core.aluminum_ingot": "Aluminum Ingot",
   "item.lemon_core.cobalt_ingot": "Cobalt Ingot",
   "item.lemon_core.lead_ingot": "Lead Ingot",
+  "item.lemon_core.manganese_ingot": "Manganese Ingot",
   "item.lemon_core.nickel_ingot": "Nickel Ingot",
   "item.lemon_core.osmium_ingot": "Osmium Ingot",
   "item.lemon_core.silver_ingot": "Silver Ingot",
@@ -41,6 +42,7 @@
   "item.lemon_core.aluminum_nugget": "Aluminum Nugget",
   "item.lemon_core.cobalt_nugget": "Cobalt Nugget",
   "item.lemon_core.lead_nugget": "Lead Nugget",
+  "item.lemon_core.manganese_nugget": "Manganese Nugget",
   "item.lemon_core.nickel_nugget": "Nickel Nugget",
   "item.lemon_core.osmium_nugget": "Osmium Nugget",
   "item.lemon_core.silver_nugget": "Silver Nugget",
@@ -64,6 +66,7 @@
   "block.lemon_core.aluminum_block": "Block of Aluminum",
   "block.lemon_core.cobalt_block": "Block of Cobalt",
   "block.lemon_core.lead_block": "Block of Lead",
+  "block.lemon_core.manganese_block": "Block of Manganese",
   "block.lemon_core.nickel_block": "Block of Nickel",
   "block.lemon_core.osmium_block": "Block of Osmium",
   "block.lemon_core.silver_block": "Block of Silver",
