--- a/src/main/resources/assets/lemon_core/lang/en_us.json
+++ b/src/main/resources/assets/lemon_core/lang/en_us.json
@@ -56,6 +56,13 @@
   "item.lemon_core.invar_nugget": "Invar Nugget",
   "item.lemon_core.steel_nugget": "Steel Nugget",
 
+  "item.lemon_core.wooden_ore_crushing_hammer": "Wooden Ore Crushing Hammer",
+  "item.lemon_core.stone_ore_crushing_hammer": "Stone Ore Crushing Hammer",
+  "item.lemon_core.iron_ore_crushing_hammer": "Iron Ore Crushing Hammer",
+  "item.lemon_core.golden_ore_crushing_hammer": "Golden Ore Crushing Hammer",
+  "item.lemon_core.diamond_ore_crushing_hammer": "Diamond Ore Crushing Hammer",
+  "item.lemon_core.netherite_ore_crushing_hammer": "Netherite Ore Crushing Hammer",
+
   "abstract_tiny_coal.tooltip": "Smelts One Item",
 
   "block.lemon_core.peridot_block": "Peridot Block",
