--- a/src/main/resources/assets/lemon_core/lang/en_us.json
+++ b/src/main/resources/assets/lemon_core/lang/en_us.json
@@ -1,12 +1,14 @@
 {
   "item.lemon_core.apatite": "Apatite",
   "item.lemon_core.peridot": "Peridot",
+  "item.lemon_core.rose_quartz": "Rose Quartz",
   "item.lemon_core.ruby": "Ruby",
   "item.lemon_core.sapphire": "Sapphire",
   "item.lemon_core.silicon": "Silicon",
 
   "item.lemon_core.apatite_fragment": "Apatite Fragment",
   "item.lemon_core.peridot_fragment": "Peridot Fragment",
+  "item.lemon_core.rose_quartz_fragment": "Rose Quartz Fragment",
   "item.lemon_core.ruby_fragment": "Ruby Fragment",
   "item.lemon_core.sapphire_fragment": "Sapphire Fragment",
   "item.lemon_core.silicon_fragment": "Silicon Fragment",
@@ -68,10 +70,11 @@
   "abstract_tiny_coal.tooltip": "Smelts One Item",
 
   "block.lemon_core.apatite_block": "Block of Apatite",
-  "block.lemon_core.peridot_block": "Block Peridot",
-  "block.lemon_core.ruby_block": "Block Ruby",
-  "block.lemon_core.sapphire_block": "Block Sapphire",
-  "block.lemon_core.silicon_block": "Block Silicon",
+  "block.lemon_core.peridot_block": "Block of Peridot",
+  "block.lemon_core.rose_quartz_block": "Block of Rose Quartz",
+  "block.lemon_core.ruby_block": "Block of Ruby",
+  "block.lemon_core.sapphire_block": "Block of Sapphire",
+  "block.lemon_core.silicon_block": "Block of Silicon",
 
   "block.lemon_core.aluminum_block": "Block of Aluminum",
   "block.lemon_core.cobalt_block": "Block of Cobalt",
