--- a/src/main/resources/assets/lemon_core/lang/en_us.json
+++ b/src/main/resources/assets/lemon_core/lang/en_us.json
@@ -28,6 +28,7 @@
   "item.lemon_core.cobalt_ingot": "Cobalt Ingot",
   "item.lemon_core.lead_ingot": "Lead Ingot",
   "item.lemon_core.manganese_ingot": "Manganese Ingot",
+  "item.lemon_core.necronite_ingot": "Necronite Ingot",
   "item.lemon_core.nickel_ingot": "Nickel Ingot",
   "item.lemon_core.osmium_ingot": "Osmium Ingot",
   "item.lemon_core.silver_ingot": "Silver Ingot",
@@ -47,6 +48,7 @@
   "item.lemon_core.cobalt_nugget": "Cobalt Nugget",
   "item.lemon_core.lead_nugget": "Lead Nugget",
   "item.lemon_core.manganese_nugget": "Manganese Nugget",
+  "item.lemon_core.necronite_nugget": "Necronite Nugget",
   "item.lemon_core.nickel_nugget": "Nickel Nugget",
   "item.lemon_core.osmium_nugget": "Osmium Nugget",
   "item.lemon_core.silver_nugget": "Silver Nugget",
@@ -80,6 +82,7 @@
   "block.lemon_core.cobalt_block": "Block of Cobalt",
   "block.lemon_core.lead_block": "Block of Lead",
   "block.lemon_core.manganese_block": "Block of Manganese",
+  "block.lemon_core.necronite_block": "Block of Necronite",
   "block.lemon_core.nickel_block": "Block of Nickel",
   "block.lemon_core.osmium_block": "Block of Osmium",
   "block.lemon_core.silver_block": "Block of Silver",
