--- a/src/main/resources/assets/lemon_core/lang/en_us.json
+++ b/src/main/resources/assets/lemon_core/lang/en_us.json
@@ -1,17 +1,21 @@
 {
   "item.lemon_core.apatite": "Apatite",
+  "item.lemon_core.certus_quartz": "Certus Quartz",
   "item.lemon_core.peridot": "Peridot",
   "item.lemon_core.rose_quartz": "Rose Quartz",
   "item.lemon_core.ruby": "Ruby",
   "item.lemon_core.sapphire": "Sapphire",
   "item.lemon_core.silicon": "Silicon",
+  "item.lemon_core.sulfur": "Sulfur",
 
   "item.lemon_core.apatite_fragment": "Apatite Fragment",
+  "item.lemon_core.certus_quartz_fragment": "Certus Quartz Fragment",
   "item.lemon_core.peridot_fragment": "Peridot Fragment",
   "item.lemon_core.rose_quartz_fragment": "Rose Quartz Fragment",
   "item.lemon_core.ruby_fragment": "Ruby Fragment",
   "item.lemon_core.sapphire_fragment": "Sapphire Fragment",
   "item.lemon_core.silicon_fragment": "Silicon Fragment",
+  "item.lemon_core.sulfur_fragment": "Sulfur Fragment",
   "item.lemon_core.amethyst_fragment": "Amethyst Fragment",
   "item.lemon_core.diamond_fragment": "Diamond Fragment",
   "item.lemon_core.emerald_fragment": "Emerald Fragment",
@@ -69,14 +73,16 @@
   "item.lemon_core.diamond_ore_crushing_hammer": "Diamond Ore Crushing Hammer",
   "item.lemon_core.netherite_ore_crushing_hammer": "Netherite Ore Crushing Hammer",
 
-  "abstract_tiny_coal.tooltip": "Smelts One Item",
+  "lemon_core.abstract_tiny_coal.tooltip": "Smelts One Item",
 
   "block.lemon_core.apatite_block": "Block of Apatite",
+  "block.lemon_core.certus_quartz_block": "Block of Certus Quartz",
   "block.lemon_core.peridot_block": "Block of Peridot",
   "block.lemon_core.rose_quartz_block": "Block of Rose Quartz",
   "block.lemon_core.ruby_block": "Block of Ruby",
   "block.lemon_core.sapphire_block": "Block of Sapphire",
   "block.lemon_core.silicon_block": "Block of Silicon",
+  "block.lemon_core.sulfur_block": "Block of Sulfur",
 
   "block.lemon_core.aluminum_block": "Block of Aluminum",
   "block.lemon_core.cobalt_block": "Block of Cobalt",
