--- a/src/main/resources/assets/lemon_core/lang/en_us.json
+++ b/src/main/resources/assets/lemon_core/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.lemon_core.apatite": "Apatite",
   "item.lemon_core.certus_quartz": "Certus Quartz",
   "item.lemon_core.charged_certus_quartz": "Charged Certus Quartz",
+  "item.lemon_core.fluix_crystal": "Fluix Crystal",
   "item.lemon_core.peridot": "Peridot",
   "item.lemon_core.rose_quartz": "Rose Quartz",
   "item.lemon_core.ruby": "Ruby",
@@ -12,6 +13,7 @@
   "item.lemon_core.apatite_fragment": "Apatite Fragment",
   "item.lemon_core.certus_quartz_fragment": "Certus Quartz Fragment",
   "item.lemon_core.charged_certus_quartz_fragment": "Charged Certus Quartz Fragment",
+  "item.lemon_core.fluix_crystal_fragment": "Fluix Crystal Fragment",
   "item.lemon_core.peridot_fragment": "Peridot Fragment",
   "item.lemon_core.rose_quartz_fragment": "Rose Quartz Fragment",
   "item.lemon_core.ruby_fragment": "Ruby Fragment",
@@ -80,6 +82,7 @@
   "block.lemon_core.apatite_block": "Block of Apatite",
   "block.lemon_core.certus_quartz_block": "Block of Certus Quartz",
   "block.lemon_core.charged_certus_quartz_block": "Block of Charged Certus Quartz",
+  "block.lemon_core.fluix_crystal_block": "Block of Fluix Crystal",
   "block.lemon_core.peridot_block": "Block of Peridot",
   "block.lemon_core.rose_quartz_block": "Block of Rose Quartz",
   "block.lemon_core.ruby_block": "Block of Ruby",
