--- a/src/main/resources/assets/lemon_core/lang/en_us.json
+++ b/src/main/resources/assets/lemon_core/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.lemon_core.apatite": "Apatite",
   "item.lemon_core.certus_quartz": "Certus Quartz",
   "item.lemon_core.charged_certus_quartz": "Charged Certus Quartz",
+  "item.lemon_core.coal_coke": "Coal Coke",
   "item.lemon_core.dimensional_shard": "Dimensional Shard",
   "item.lemon_core.fluix_crystal": "Fluix Crystal",
   "item.lemon_core.peridot": "Peridot",
@@ -34,7 +35,6 @@
   "item.lemon_core.obsidian_shard": "Obsidian Shard",
   "item.lemon_core.tiny_charcoal": "Tiny Charcoal",
   "item.lemon_core.tiny_coal": "Tiny Coal",
-  "item.lemon_core.coal_coke": "Coal Coke",
   "item.lemon_core.colorless_xychronite_crystal": "Colorless Xychronite Crystal",
 
   "item.lemon_core.aluminum_ingot": "Aluminum Ingot",
@@ -44,8 +44,10 @@
   "item.lemon_core.necronite_ingot": "Necronite Ingot",
   "item.lemon_core.nickel_ingot": "Nickel Ingot",
   "item.lemon_core.osmium_ingot": "Osmium Ingot",
+  "item.lemon_core.platinum_ingot": "Platinum Ingot",
   "item.lemon_core.silver_ingot": "Silver Ingot",
   "item.lemon_core.tin_ingot": "Tin Ingot",
+  "item.lemon_core.tungsten_ingot": "Tungsten Ingot",
   "item.lemon_core.uranium_ingot": "Uranium Ingot",
   "item.lemon_core.zinc_ingot": "Zinc Ingot",
   "item.lemon_core.brass_ingot": "Brass Ingot",
@@ -65,8 +67,10 @@
   "item.lemon_core.necronite_nugget": "Necronite Nugget",
   "item.lemon_core.nickel_nugget": "Nickel Nugget",
   "item.lemon_core.osmium_nugget": "Osmium Nugget",
+  "item.lemon_core.platinum_nugget": "Platinum Nugget",
   "item.lemon_core.silver_nugget": "Silver Nugget",
   "item.lemon_core.tin_nugget": "Tin Nugget",
+  "item.lemon_core.tungsten_nugget": "Tungsten Nugget",
   "item.lemon_core.uranium_nugget": "Uranium Nugget",
   "item.lemon_core.zinc_nugget": "Zinc Nugget",
   "item.lemon_core.brass_nugget": "Brass Nugget",
@@ -104,8 +108,10 @@
   "block.lemon_core.necronite_block": "Block of Necronite",
   "block.lemon_core.nickel_block": "Block of Nickel",
   "block.lemon_core.osmium_block": "Block of Osmium",
+  "block.lemon_core.platinum_block": "Block of Platinum",
   "block.lemon_core.silver_block": "Block of Silver",
   "block.lemon_core.tin_block": "Block of Tin",
+  "block.lemon_core.tungsten_block": "Block of Tungsten",
   "block.lemon_core.uranium_block": "Block of Uranium",
   "block.lemon_core.zinc_block": "Block of Zinc",
   "block.lemon_core.brass_block": "Block of Brass",
@@ -119,7 +125,7 @@
   "tooltip.lemon_core.abstract_tiny_coal": "Smelts One Item",
   "tooltip.lemon_core.coal_coke": "Smelts Sixteen Items",
   "tooltip.lemon_core.coal_coke_block": "Smelts One Hundred Forty Four Items",
-  "tooltip.lemon_core.integration": "Lemon Core x",
+  "tooltip.lemon_core.integration": "Lemon Core",
 
   "itemGroup.lemon_core": "Lemon Core"
 }
