--- a/src/main/resources/assets/lemon_core/lang/en_us.json
+++ b/src/main/resources/assets/lemon_core/lang/en_us.json
@@ -2,8 +2,10 @@
   "item.lemon_core.apatite": "Apatite",
   "item.lemon_core.certus_quartz": "Certus Quartz",
   "item.lemon_core.charged_certus_quartz": "Charged Certus Quartz",
+  "item.lemon_core.cinnabar": "Cinnabar",
   "item.lemon_core.coal_coke": "Coal Coke",
   "item.lemon_core.dimensional_shard": "Dimensional Shard",
+  "item.lemon_core.niter": "Niter",
   "item.lemon_core.fluix_crystal": "Fluix Crystal",
   "item.lemon_core.peridot": "Peridot",
   "item.lemon_core.rose_quartz": "Rose Quartz",
@@ -15,8 +17,10 @@
   "item.lemon_core.apatite_fragment": "Apatite Fragment",
   "item.lemon_core.certus_quartz_fragment": "Certus Quartz Fragment",
   "item.lemon_core.charged_certus_quartz_fragment": "Charged Certus Quartz Fragment",
+  "item.lemon_core.cinnabar_fragment": "Cinnabar Fragment",
   "item.lemon_core.dimensional_shard_fragment": "Dimensional Shard Fragment",
   "item.lemon_core.fluix_crystal_fragment": "Fluix Crystal Fragment",
+  "item.lemon_core.niter_fragment": "Niter Fragment",
   "item.lemon_core.peridot_fragment": "Peridot Fragment",
   "item.lemon_core.rose_quartz_fragment": "Rose Quartz Fragment",
   "item.lemon_core.ruby_fragment": "Ruby Fragment",
@@ -91,9 +95,11 @@
   "block.lemon_core.apatite_block": "Block of Apatite",
   "block.lemon_core.certus_quartz_block": "Block of Certus Quartz",
   "block.lemon_core.charged_certus_quartz_block": "Block of Charged Certus Quartz",
+  "block.lemon_core.cinnabar_block": "Block of Cinnabar",
   "block.lemon_core.coal_coke_block": "Block of Coal Coke",
   "block.lemon_core.dimensional_shard_block": "Block of Dimensional Shard",
   "block.lemon_core.fluix_crystal_block": "Block of Fluix Crystal",
+  "block.lemon_core.niter_block": "Block of Niter",
   "block.lemon_core.peridot_block": "Block of Peridot",
   "block.lemon_core.rose_quartz_block": "Block of Rose Quartz",
   "block.lemon_core.ruby_block": "Block of Ruby",
