--- a/src/main/resources/assets/lemon_core/lang/en_us.json
+++ b/src/main/resources/assets/lemon_core/lang/en_us.json
@@ -45,7 +45,6 @@
   "item.lemon_core.cobalt_ingot": "Cobalt Ingot",
   "item.lemon_core.lead_ingot": "Lead Ingot",
   "item.lemon_core.manganese_ingot": "Manganese Ingot",
-  "item.lemon_core.necronite_ingot": "Necronite Ingot",
   "item.lemon_core.nickel_ingot": "Nickel Ingot",
   "item.lemon_core.osmium_ingot": "Osmium Ingot",
   "item.lemon_core.platinum_ingot": "Platinum Ingot",
@@ -59,6 +58,8 @@
   "item.lemon_core.constantan_ingot": "Constantan Ingot",
   "item.lemon_core.electrum_ingot": "Electrum Ingot",
   "item.lemon_core.invar_ingot": "Invar Ingot",
+  "item.lemon_core.manyullyn_ingot": "Manyullyn Ingot",
+  "item.lemon_core.necronite_ingot": "Necronite Ingot",
   "item.lemon_core.refined_iron_ingot": "Refined Iron Ingot",
   "item.lemon_core.steel_ingot": "Steel Ingot",
 
@@ -68,7 +69,6 @@
   "item.lemon_core.cobalt_nugget": "Cobalt Nugget",
   "item.lemon_core.lead_nugget": "Lead Nugget",
   "item.lemon_core.manganese_nugget": "Manganese Nugget",
-  "item.lemon_core.necronite_nugget": "Necronite Nugget",
   "item.lemon_core.nickel_nugget": "Nickel Nugget",
   "item.lemon_core.osmium_nugget": "Osmium Nugget",
   "item.lemon_core.platinum_nugget": "Platinum Nugget",
@@ -82,6 +82,8 @@
   "item.lemon_core.constantan_nugget": "Constantan Nugget",
   "item.lemon_core.electrum_nugget": "Electrum Nugget",
   "item.lemon_core.invar_nugget": "Invar Nugget",
+  "item.lemon_core.manyullyn_nugget": "Manyullyn Nugget",
+  "item.lemon_core.necronite_nugget": "Necronite Nugget",
   "item.lemon_core.refined_iron_nugget": "Refined Iron Nugget",
   "item.lemon_core.steel_nugget": "Steel Nugget",
 
@@ -111,7 +113,6 @@
   "block.lemon_core.cobalt_block": "Block of Cobalt",
   "block.lemon_core.lead_block": "Block of Lead",
   "block.lemon_core.manganese_block": "Block of Manganese",
-  "block.lemon_core.necronite_block": "Block of Necronite",
   "block.lemon_core.nickel_block": "Block of Nickel",
   "block.lemon_core.osmium_block": "Block of Osmium",
   "block.lemon_core.platinum_block": "Block of Platinum",
@@ -125,6 +126,8 @@
   "block.lemon_core.constantan_block": "Block of Constantan",
   "block.lemon_core.electrum_block": "Block of Electrum",
   "block.lemon_core.invar_block": "Block of Invar",
+  "block.lemon_core.manyullyn_block": "Block of Manyullyn",
+  "block.lemon_core.necronite_block": "Block of Necronite",
   "block.lemon_core.refined_iron_block": "Block of Refined Iron",
   "block.lemon_core.steel_block": "Block of Steel",
 
