--- a/src/main/resources/assets/lemon_core/lang/en_us.json
+++ b/src/main/resources/assets/lemon_core/lang/en_us.json
@@ -57,10 +57,14 @@
   "item.lemon_core.bronze_ingot": "Bronze Ingot",
   "item.lemon_core.constantan_ingot": "Constantan Ingot",
   "item.lemon_core.electrum_ingot": "Electrum Ingot",
+  "item.lemon_core.enderium_ingot": "Enderium Ingot",
   "item.lemon_core.invar_ingot": "Invar Ingot",
+  "item.lemon_core.lumium_ingot": "Lumium Ingot",
   "item.lemon_core.manyullyn_ingot": "Manyullyn Ingot",
   "item.lemon_core.necronite_ingot": "Necronite Ingot",
   "item.lemon_core.refined_iron_ingot": "Refined Iron Ingot",
+  "item.lemon_core.rose_gold_ingot": "Rose Gold Ingot",
+  "item.lemon_core.signalum_ingot": "Signalum Ingot",
   "item.lemon_core.steel_ingot": "Steel Ingot",
 
   "item.lemon_core.copper_nugget": "Copper Nugget",
@@ -81,10 +85,14 @@
   "item.lemon_core.bronze_nugget": "Bronze Nugget",
   "item.lemon_core.constantan_nugget": "Constantan Nugget",
   "item.lemon_core.electrum_nugget": "Electrum Nugget",
+  "item.lemon_core.enderium_nugget": "Enderium Nugget",
   "item.lemon_core.invar_nugget": "Invar Nugget",
+  "item.lemon_core.lumium_nugget": "Lumium Nugget",
   "item.lemon_core.manyullyn_nugget": "Manyullyn Nugget",
   "item.lemon_core.necronite_nugget": "Necronite Nugget",
   "item.lemon_core.refined_iron_nugget": "Refined Iron Nugget",
+  "item.lemon_core.rose_gold_nugget": "Rose Gold Nugget",
+  "item.lemon_core.signalum_nugget": "Signalum Nugget",
   "item.lemon_core.steel_nugget": "Steel Nugget",
 
   "item.lemon_core.wooden_ore_crushing_hammer": "Wooden Ore Crushing Hammer",
@@ -125,10 +133,14 @@
   "block.lemon_core.bronze_block": "Block of Bronze",
   "block.lemon_core.constantan_block": "Block of Constantan",
   "block.lemon_core.electrum_block": "Block of Electrum",
+  "block.lemon_core.enderium_block": "Block of Enderium",
   "block.lemon_core.invar_block": "Block of Invar",
+  "block.lemon_core.lumium_block": "Block of Lumium",
   "block.lemon_core.manyullyn_block": "Block of Manyullyn",
   "block.lemon_core.necronite_block": "Block of Necronite",
   "block.lemon_core.refined_iron_block": "Block of Refined Iron",
+  "block.lemon_core.rose_gold_block": "Block of Rose Gold",
+  "block.lemon_core.signalum_block": "Block of Signalum",
   "block.lemon_core.steel_block": "Block of Steel",
 
   "tooltip.lemon_core.abstract_tiny_coal": "Smelts One Item",
