--- a/src/main/resources/assets/lemon_core/lang/en_us.json
+++ b/src/main/resources/assets/lemon_core/lang/en_us.json
@@ -42,11 +42,14 @@
   "item.lemon_core.colorless_xychronite_crystal": "Colorless Xychronite Crystal",
 
   "item.lemon_core.aluminum_ingot": "Aluminum Ingot",
+  "item.lemon_core.calorite_ingot": "Calorite Ingot",
   "item.lemon_core.cobalt_ingot": "Cobalt Ingot",
+  "item.lemon_core.desh_ingot": "Desh Ingot",
   "item.lemon_core.lead_ingot": "Lead Ingot",
   "item.lemon_core.manganese_ingot": "Manganese Ingot",
   "item.lemon_core.nickel_ingot": "Nickel Ingot",
   "item.lemon_core.osmium_ingot": "Osmium Ingot",
+  "item.lemon_core.ostrum_ingot": "Ostrum Ingot",
   "item.lemon_core.platinum_ingot": "Platinum Ingot",
   "item.lemon_core.silver_ingot": "Silver Ingot",
   "item.lemon_core.tin_ingot": "Tin Ingot",
@@ -67,7 +70,9 @@
   "item.lemon_core.signalum_ingot": "Signalum Ingot",
   "item.lemon_core.steel_ingot": "Steel Ingot",
 
+  "item.lemon_core.calorite_nugget": "Calorite Nugget",
   "item.lemon_core.copper_nugget": "Copper Nugget",
+  "item.lemon_core.desh_nugget": "Desh Nugget",
   "item.lemon_core.netherite_nugget": "Netherite Nugget",
   "item.lemon_core.aluminum_nugget": "Aluminum Nugget",
   "item.lemon_core.cobalt_nugget": "Cobalt Nugget",
@@ -75,6 +80,7 @@
   "item.lemon_core.manganese_nugget": "Manganese Nugget",
   "item.lemon_core.nickel_nugget": "Nickel Nugget",
   "item.lemon_core.osmium_nugget": "Osmium Nugget",
+  "item.lemon_core.ostrum_nugget": "Ostrum Nugget",
   "item.lemon_core.platinum_nugget": "Platinum Nugget",
   "item.lemon_core.silver_nugget": "Silver Nugget",
   "item.lemon_core.tin_nugget": "Tin Nugget",
@@ -118,11 +124,14 @@
   "block.lemon_core.sulfur_block": "Block of Sulfur",
 
   "block.lemon_core.aluminum_block": "Block of Aluminum",
+  "block.lemon_core.calorite_block": "Block of Calorite",
   "block.lemon_core.cobalt_block": "Block of Cobalt",
+  "block.lemon_core.desh_block": "Block of Desh",
   "block.lemon_core.lead_block": "Block of Lead",
   "block.lemon_core.manganese_block": "Block of Manganese",
   "block.lemon_core.nickel_block": "Block of Nickel",
   "block.lemon_core.osmium_block": "Block of Osmium",
+  "block.lemon_core.ostrum_block": "Block of Ostrum",
   "block.lemon_core.platinum_block": "Block of Platinum",
   "block.lemon_core.silver_block": "Block of Silver",
   "block.lemon_core.tin_block": "Block of Tin",
