--- a/src/main/resources/assets/lemon_core/lang/en_us.json
+++ b/src/main/resources/assets/lemon_core/lang/en_us.json
@@ -7,14 +7,18 @@
   "item.lemon_core.cinnabar": "Cinnabar",
   "item.lemon_core.coal_coke": "Coal Coke",
   "item.lemon_core.dimensional_shard": "Dimensional Shard",
-  "item.lemon_core.niter": "Niter",
+  "item.lemon_core.ender_crystal": "Ender Crystal",
   "item.lemon_core.fluix_crystal": "Fluix Crystal",
+  "item.lemon_core.niter": "Niter",
   "item.lemon_core.peridot": "Peridot",
+  "item.lemon_core.prescient_crystal": "Prescient Crystal",
+  "item.lemon_core.pulsating_crystal": "Pulsating Crystal",
   "item.lemon_core.rose_quartz": "Rose Quartz",
   "item.lemon_core.ruby": "Ruby",
   "item.lemon_core.sapphire": "Sapphire",
   "item.lemon_core.silicon": "Silicon",
   "item.lemon_core.sulfur": "Sulfur",
+  "item.lemon_core.vibrant_crystal": "Vibrant Crystal",
 
   "item.lemon_core.anglesite_fragment": "Anglesite Fragment (PbSO4)",
   "item.lemon_core.apatite_fragment": "Apatite Fragment",
@@ -23,9 +27,12 @@
   "item.lemon_core.charged_certus_quartz_fragment": "Charged Certus Quartz Fragment",
   "item.lemon_core.cinnabar_fragment": "Cinnabar Fragment",
   "item.lemon_core.dimensional_shard_fragment": "Dimensional Shard Fragment",
+  "item.lemon_core.ender_crystal_fragment": "Ender Crystal Fragment",
   "item.lemon_core.fluix_crystal_fragment": "Fluix Crystal Fragment",
   "item.lemon_core.niter_fragment": "Niter Fragment",
   "item.lemon_core.peridot_fragment": "Peridot Fragment",
+  "item.lemon_core.prescient_crystal_fragment": "Prescient Crystal Fragment",
+  "item.lemon_core.pulsating_crystal_fragment": "Pulsating Crystal Fragment",
   "item.lemon_core.rose_quartz_fragment": "Rose Quartz Fragment",
   "item.lemon_core.ruby_fragment": "Ruby Fragment",
   "item.lemon_core.sapphire_fragment": "Sapphire Fragment",
@@ -37,6 +44,7 @@
   "item.lemon_core.ender_pearl_fragment": "Ender Pearl Fragment",
   "item.lemon_core.lapis_lazuli_fragment": "Lapis Lazuli Fragment",
   "item.lemon_core.nether_quartz_fragment": "Nether Quartz Fragment",
+  "item.lemon_core.vibrant_crystal_fragment": "Vibrant Crystal Fragment",
 
   "item.lemon_core.anglesite_dust": "Anglesite Dust (PbSO4)",
   "item.lemon_core.apatite_dust": "Apatite Dust",
@@ -47,14 +55,19 @@
   "item.lemon_core.cinnabar_dust": "Cinnabar Dust",
   "item.lemon_core.coal_dust": "Coal Dust",
   "item.lemon_core.dimensional_shard_dust": "Dimensional Shard Dust",
+  "item.lemon_core.ender_crystal_dust": "Ender Crystal Dust",
   "item.lemon_core.fluix_crystal_dust": "Fluix Crystal Dust",
   "item.lemon_core.niter_dust": "Niter Dust",
   "item.lemon_core.peridot_dust": "Peridot Dust",
+  "item.lemon_core.prescient_crystal_dust": "Prescient Crystal Dust",
+  "item.lemon_core.pulsating_crystal_dust": "Pulsating Crystal Dust",
   "item.lemon_core.rose_quartz_dust": "Rose Quartz Dust",
   "item.lemon_core.ruby_dust": "Ruby Dust",
   "item.lemon_core.sapphire_dust": "Sapphire Dust",
   "item.lemon_core.silicon_dust": "Silicon Dust",
   "item.lemon_core.sulfur_dust": "Sulfur Dust",
+  "item.lemon_core.vibrant_crystal_dust": "Vibrant Crystal Dust",
+
   "item.lemon_core.amethyst_dust": "Amethyst Dust",
   "item.lemon_core.diamond_dust": "Diamond Dust",
   "item.lemon_core.emerald_dust": "Emerald Dust",
@@ -227,14 +240,18 @@
   "block.lemon_core.cinnabar_block": "Block of Cinnabar",
   "block.lemon_core.coal_coke_block": "Block of Coal Coke",
   "block.lemon_core.dimensional_shard_block": "Block of Dimensional Shard",
+  "block.lemon_core.ender_crystal_block": "Block of Ender Crystal",
   "block.lemon_core.fluix_crystal_block": "Block of Fluix Crystal",
   "block.lemon_core.niter_block": "Block of Niter",
   "block.lemon_core.peridot_block": "Block of Peridot",
+  "block.lemon_core.prescient_crystal_block": "Block of Prescient Crystal",
+  "block.lemon_core.pulsating_crystal_block": "Block of Pulsating Crystal",
   "block.lemon_core.rose_quartz_block": "Block of Rose Quartz",
   "block.lemon_core.ruby_block": "Block of Ruby",
   "block.lemon_core.sapphire_block": "Block of Sapphire",
   "block.lemon_core.silicon_block": "Block of Silicon",
   "block.lemon_core.sulfur_block": "Block of Sulfur",
+  "block.lemon_core.vibrant_crystal_block": "Block of Vibrant Crystal",
 
   "block.lemon_core.aluminum_block": "Block of Aluminum",
   "block.lemon_core.blutonium_block": "Block of Blutonium",
