--- a/src/main/resources/assets/lemon_core/lang/en_us.json
+++ b/src/main/resources/assets/lemon_core/lang/en_us.json
@@ -54,6 +54,7 @@
   "item.lemon_core.charcoal_dust": "Charcoal Dust",
   "item.lemon_core.cinnabar_dust": "Cinnabar Dust",
   "item.lemon_core.coal_dust": "Coal Dust",
+  "item.lemon_core.coal_coke_dust": "Coal Coke Dust",
   "item.lemon_core.dimensional_shard_dust": "Dimensional Shard Dust",
   "item.lemon_core.ender_crystal_dust": "Ender Crystal Dust",
   "item.lemon_core.fluix_crystal_dust": "Fluix Crystal Dust",
