--- a/src/main/resources/assets/lemon_core/lang/en_us.json
+++ b/src/main/resources/assets/lemon_core/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.lemon_core.anglesite": "Anglesite (PbSO4)",
   "item.lemon_core.apatite": "Apatite",
   "item.lemon_core.benitoite": "Benitoite (BaTiSi3O9)",
+  "item.lemon_core.blutstein": "Blutstein",
   "item.lemon_core.certus_quartz": "Certus Quartz",
   "item.lemon_core.charged_certus_quartz": "Charged Certus Quartz",
   "item.lemon_core.cinnabar": "Cinnabar",
@@ -24,6 +25,7 @@
   "item.lemon_core.anglesite_fragment": "Anglesite Fragment (PbSO4)",
   "item.lemon_core.apatite_fragment": "Apatite Fragment",
   "item.lemon_core.benitoite_fragment": "Benitoite Fragment (BaTiSi3O9)",
+  "item.lemon_core.blutstein_fragment": "Blutstein Fragment",
   "item.lemon_core.certus_quartz_fragment": "Certus Quartz Fragment",
   "item.lemon_core.charged_certus_quartz_fragment": "Charged Certus Quartz Fragment",
   "item.lemon_core.cinnabar_fragment": "Cinnabar Fragment",
@@ -52,6 +54,7 @@
   "item.lemon_core.anglesite_dust": "Anglesite Dust (PbSO4)",
   "item.lemon_core.apatite_dust": "Apatite Dust",
   "item.lemon_core.benitoite_dust": "Benitoite Dust (BaTiSi3O9)",
+  "item.lemon_core.blutstein_dust": "Blutstein Dust",
   "item.lemon_core.certus_quartz_dust": "Certus Quartz Dust",
   "item.lemon_core.charged_certus_quartz_dust": "Charged Certus Quartz Dust",
   "item.lemon_core.charcoal_dust": "Charcoal Dust",
@@ -111,6 +114,8 @@
   "item.lemon_core.tungsten_ingot": "Tungsten Ingot",
   "item.lemon_core.uranium_ingot": "Uranium Ingot",
   "item.lemon_core.zinc_ingot": "Zinc Ingot",
+  "item.lemon_core.zweiite_ingot": "Zweiite Ingot",
+
   "item.lemon_core.brass_ingot": "Brass Ingot",
   "item.lemon_core.bronze_ingot": "Bronze Ingot",
   "item.lemon_core.conductive_alloy_ingot": "Conductive Alloy Ingot",
@@ -158,6 +163,8 @@
   "item.lemon_core.tungsten_nugget": "Tungsten Nugget",
   "item.lemon_core.uranium_nugget": "Uranium Nugget",
   "item.lemon_core.zinc_nugget": "Zinc Nugget",
+  "item.lemon_core.zweiite_nugget": "Zweiite Nugget",
+
   "item.lemon_core.brass_nugget": "Brass Nugget",
   "item.lemon_core.bronze_nugget": "Bronze Nugget",
   "item.lemon_core.conductive_alloy_nugget": "Conductive Alloy Nugget",
@@ -207,6 +214,8 @@
   "item.lemon_core.tungsten_dust": "Tungsten Dust",
   "item.lemon_core.uranium_dust": "Uranium Dust",
   "item.lemon_core.zinc_dust": "Zinc Dust",
+  "item.lemon_core.zweiite_dust": "Zweiite Dust",
+
   "item.lemon_core.brass_dust": "Brass Dust",
   "item.lemon_core.bronze_dust": "Bronze Dust",
   "item.lemon_core.conductive_alloy_dust": "Conductive Alloy Dust",
@@ -240,6 +249,7 @@
   "block.lemon_core.anglesite_block": "Block of Anglesite (PbSO4)",
   "block.lemon_core.apatite_block": "Block of Apatite",
   "block.lemon_core.benitoite_block": "Block of Benitoite (BaTiSi3O9)",
+  "block.lemon_core.blutstein_block": "Block of Blutstein",
   "block.lemon_core.certus_quartz_block": "Block of Certus Quartz",
   "block.lemon_core.charged_certus_quartz_block": "Block of Charged Certus Quartz",
   "block.lemon_core.cinnabar_block": "Block of Cinnabar",
@@ -281,6 +291,8 @@
   "block.lemon_core.tungsten_block": "Block of Tungsten",
   "block.lemon_core.uranium_block": "Block of Uranium",
   "block.lemon_core.zinc_block": "Block of Zinc",
+  "block.lemon_core.zweiite_block": "Block of Zweiite",
+
   "block.lemon_core.brass_block": "Block of Brass",
   "block.lemon_core.bronze_block": "Block of Bronze",
   "block.lemon_core.conductive_alloy_block": "Block of Conductive Alloy",
