--- a/src/main/resources/assets/lemon_core/lang/en_us.json
+++ b/src/main/resources/assets/lemon_core/lang/en_us.json
@@ -131,8 +131,8 @@
   "item.lemon_core.manyullyn_ingot": "Manyullyn Ingot",
   "item.lemon_core.necronite_ingot": "Necronite Ingot",
   "item.lemon_core.pulsating_alloy_ingot": "Pulsating Alloy Ingot",
+  "item.lemon_core.quartz_enriched_iron_ingot": "Quartz Enriched Iron Ingot",
   "item.lemon_core.redstone_alloy_ingot": "Redstone Alloy Ingot",
-  "item.lemon_core.refined_iron_ingot": "Refined Iron Ingot",
   "item.lemon_core.rose_gold_ingot": "Rose Gold Ingot",
   "item.lemon_core.signalum_ingot": "Signalum Ingot",
   "item.lemon_core.soularium_ingot": "Soularium Ingot",
@@ -180,8 +180,8 @@
   "item.lemon_core.manyullyn_nugget": "Manyullyn Nugget",
   "item.lemon_core.necronite_nugget": "Necronite Nugget",
   "item.lemon_core.pulsating_alloy_nugget": "Pulsating Alloy Nugget",
+  "item.lemon_core.quartz_enriched_iron_nugget": "Quartz Enriched Iron Nugget",
   "item.lemon_core.redstone_alloy_nugget": "Redstone Alloy Nugget",
-  "item.lemon_core.refined_iron_nugget": "Refined Iron Nugget",
   "item.lemon_core.rose_gold_nugget": "Rose Gold Nugget",
   "item.lemon_core.signalum_nugget": "Signalum Nugget",
   "item.lemon_core.soularium_nugget": "Soularium Nugget",
@@ -231,8 +231,8 @@
   "item.lemon_core.manyullyn_dust": "Manyullyn Dust",
   "item.lemon_core.necronite_dust": "Necronite Dust",
   "item.lemon_core.pulsating_alloy_dust": "Pulsating Alloy Dust",
+  "item.lemon_core.quartz_enriched_iron_dust": "Quartz Enriched Iron Dust",
   "item.lemon_core.redstone_alloy_dust": "Redstone Alloy Dust",
-  "item.lemon_core.refined_iron_dust": "Refined Iron Dust",
   "item.lemon_core.rose_gold_dust": "Rose Gold Dust",
   "item.lemon_core.signalum_dust": "Signalum Dust",
   "item.lemon_core.soularium_dust": "Soularium Dust",
@@ -308,8 +308,8 @@
   "block.lemon_core.manyullyn_block": "Block of Manyullyn",
   "block.lemon_core.necronite_block": "Block of Necronite",
   "block.lemon_core.pulsating_alloy_block": "Block of Pulsating Alloy",
+  "block.lemon_core.quartz_enriched_iron_block": "Block of Quartz Enriched Iron",
   "block.lemon_core.redstone_alloy_block": "Block of Redstone Alloy",
-  "block.lemon_core.refined_iron_block": "Block of Refined Iron",
   "block.lemon_core.rose_gold_block": "Block of Rose Gold",
   "block.lemon_core.signalum_block": "Block of Signalum",
   "block.lemon_core.soularium_block": "Block of Soularium",
