--- a/src/main/resources/assets/lemon_core/lang/en_us.json
+++ b/src/main/resources/assets/lemon_core/lang/en_us.json
@@ -99,10 +99,11 @@
   "item.lemon_core.cyanite_ingot": "Cyanite Ingot",
   "item.lemon_core.desh_ingot": "Desh Ingot",
   "item.lemon_core.graphite_ingot": "Graphite Ingot",
+  "item.lemon_core.inanite_ingot": "Inanite Ingot",
   "item.lemon_core.insanite_ingot": "Insanite Ingot",
   "item.lemon_core.lead_ingot": "Lead Ingot",
   "item.lemon_core.ludicrite_ingot": "Ludicrite Ingot",
-  "item.lemon_core.magnetite_ingot": "Magnetite Ingot",
+  "item.lemon_core.magentite_ingot": "Magentite Ingot",
   "item.lemon_core.manganese_ingot": "Manganese Ingot",
   "item.lemon_core.nickel_ingot": "Nickel Ingot",
   "item.lemon_core.osmium_ingot": "Osmium Ingot",
@@ -147,10 +148,11 @@
   "item.lemon_core.cyanite_nugget": "Cyanite Nugget",
   "item.lemon_core.desh_nugget": "Desh Nugget",
   "item.lemon_core.graphite_nugget": "Graphite Nugget",
+  "item.lemon_core.inanite_nugget": "Inanite Nugget",
   "item.lemon_core.insanite_nugget": "Insanite Nugget",
   "item.lemon_core.lead_nugget": "Lead Nugget",
   "item.lemon_core.ludicrite_nugget": "Ludicrite Nugget",
-  "item.lemon_core.magnetite_nugget": "Magnetite Nugget",
+  "item.lemon_core.magentite_nugget": "Magentite Nugget",
   "item.lemon_core.manganese_nugget": "Manganese Nugget",
   "item.lemon_core.netherite_nugget": "Netherite Nugget",
   "item.lemon_core.nickel_nugget": "Nickel Nugget",
@@ -197,11 +199,12 @@
   "item.lemon_core.desh_dust": "Desh Dust",
   "item.lemon_core.gold_dust": "Gold Dust",
   "item.lemon_core.graphite_dust": "Graphite Dust",
+  "item.lemon_core.inanite_dust": "Inanite Dust",
   "item.lemon_core.insanite_dust": "Insanite Dust",
   "item.lemon_core.iron_dust": "Iron Dust",
   "item.lemon_core.lead_dust": "Lead Dust",
   "item.lemon_core.ludicrite_dust": "Ludicrite Dust",
-  "item.lemon_core.magnetite_dust": "Magnetite Dust",
+  "item.lemon_core.magentite_dust": "Magentite Dust",
   "item.lemon_core.manganese_dust": "Manganese Dust",
   "item.lemon_core.netherite_dust": "Netherite Dust",
   "item.lemon_core.nickel_dust": "Nickel Dust",
@@ -276,10 +279,11 @@
   "block.lemon_core.cyanite_block": "Block of Cyanite",
   "block.lemon_core.desh_block": "Block of Desh",
   "block.lemon_core.graphite_block": "Block of Graphite",
+  "block.lemon_core.inanite_block": "Block of Inanite",
   "block.lemon_core.insanite_block": "Block of Insanite",
   "block.lemon_core.lead_block": "Block of Lead",
   "block.lemon_core.ludicrite_block": "Block of Ludicrite",
-  "block.lemon_core.magnetite_block": "Block of Magnetite",
+  "block.lemon_core.magentite_block": "Block of Magentite",
   "block.lemon_core.manganese_block": "Block of Manganese",
   "block.lemon_core.nickel_block": "Block of Nickel",
   "block.lemon_core.osmium_block": "Block of Osmium",
